Added comment, room and ContributionClient

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Brainstorm</string>
+    <string name="backendUrl" translatable="false">https://brainstorm-dhbw-backend.herokuapp.com</string>
 </resources>
