--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,4 +39,9 @@
     <string name="contentLabel">content</string>
     <string name="newContributionLabel">New Contribution</string>
     <string name="typeModeratorPasswordLabel">Type Moderator Password</string>
+    <string name="somethingWentWrongLabel">Something went wrong. Please try again or come back later.</string>
+    <string name="checkoutThisBrainstormRoomLabel">Check out this Brainstorm room</string>
+    <string name="shareLinkToRoomVia">Share link to room via</string>
+    <string name="printResult">Print result</string>
+    <string name="noRoomFoundLabel">No room found</string>
 </resources>
