improved RoomSettings Layout

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,6 +39,10 @@
     <string name="contentLabel">content</string>
     <string name="newContributionLabel">New Contribution</string>
     <string name="typeModeratorPasswordLabel">Type Moderator Password</string>
+    <string name="errorUpdateRoom">could not apply changes</string>
+    <string name="closedRoom">Room closed</string>
+    <string name="errorCloseRoom">could not close Room</string>
+    <string name="appliedChanges">Changes applied</string>
     <string name="somethingWentWrongLabel">Something went wrong. Please try again or come back later.</string>
     <string name="checkoutThisBrainstormRoomLabel">Check out this Brainstorm room</string>
     <string name="shareLinkToRoomVia">Share link to room via</string>
